Antlr/AttributedGraphGrammar/AttributedGraphGrammarParser.py
# Generated from .\AttributedGraphGrammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class AttributedGraphGrammarParser ( Parser ):

    grammarFileName = "AttributedGraphGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'AttributedGrammar'", "':'", "'HostGraph'", 
                     "'NodeType'", "'Attribute'", "'Rule'", "'Var'", "'LHS'", 
                     "'RHS'", "'NAC'", "'AddNode'", "','", "'='", "'->'", 
                     "'RuleSequence'", "'SubSequence'", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "ID", "EXPR", 
                      "INT", "STRING", "LEFTPARAN", "RIGHTPARAN", "WS" ]

    RULE_start = 0
    RULE_startgrammar = 1
    RULE_endgrammar = 2
    RULE_grammarname = 3
    RULE_grammarstructures = 4
    RULE_nodetypes = 5
    RULE_hostgraph = 6
    RULE_rules = 7
    RULE_nodetype = 8
    RULE_nodetypename = 9
    RULE_startnodetype = 10
    RULE_endnodetype = 11
    RULE_nodetypeattribute = 12
    RULE_nodetypeattributename = 13
    RULE_nodetypeattributetype = 14
    RULE_hostgraphname = 15
    RULE_starthostgraph = 16
    RULE_endhostgraph = 17
    RULE_rule_ = 18
    RULE_rulename = 19
    RULE_startrule = 20
    RULE_endrule = 21
    RULE_ruleparameter = 22
    RULE_ruleparametername = 23
    RULE_ruleparametertype = 24
    RULE_rulelhs = 25
    RULE_rulelhsname = 26
    RULE_startrulelhs = 27
    RULE_endrulelhs = 28
    RULE_rulerhs = 29
    RULE_rulerhsname = 30
    RULE_startrulerhs = 31
    RULE_endrulerhs = 32
    RULE_rulenac = 33
    RULE_rulenacname = 34
    RULE_startrulenac = 35
    RULE_endrulenac = 36
    RULE_graph = 37
    RULE_graphstructures = 38
    RULE_addnode = 39
    RULE_addedge = 40
    RULE_nodename = 41
    RULE_nodeType = 42
    RULE_nodeTypeValue = 43
    RULE_nodeattribute = 44
    RULE_nodeattributename = 45
    RULE_nodeattributevalue = 46
    RULE_edgesource = 47
    RULE_edgetarget = 48
    RULE_rulesequences = 49
    RULE_rulesequence = 50
    RULE_rulesequencename = 51
    RULE_startrulesequence = 52
    RULE_subsequences = 53
    RULE_endrulesequence = 54
    RULE_subsequence = 55
    RULE_subsequenceiternationcount = 56
    RULE_startsubsequence = 57
    RULE_rulesequnececount = 58
    RULE_rulesequencerulename = 59
    RULE_rulecount = 60
    RULE_endsubsequence = 61
    RULE_semicolon = 62

    ruleNames =  [ "start", "startgrammar", "endgrammar", "grammarname", 
                   "grammarstructures", "nodetypes", "hostgraph", "rules", 
                   "nodetype", "nodetypename", "startnodetype", "endnodetype", 
                   "nodetypeattribute", "nodetypeattributename", "nodetypeattributetype", 
                   "hostgraphname", "starthostgraph", "endhostgraph", "rule_", 
                   "rulename", "startrule", "endrule", "ruleparameter", 
                   "ruleparametername", "ruleparametertype", "rulelhs", 
                   "rulelhsname", "startrulelhs", "endrulelhs", "rulerhs", 
                   "rulerhsname", "startrulerhs", "endrulerhs", "rulenac", 
                   "rulenacname", "startrulenac", "endrulenac", "graph", 
                   "graphstructures", "addnode", "addedge", "nodename", 
                   "nodeType", "nodeTypeValue", "nodeattribute", "nodeattributename", 
                   "nodeattributevalue", "edgesource", "edgetarget", "rulesequences", 
                   "rulesequence", "rulesequencename", "startrulesequence", 
                   "subsequences", "endrulesequence", "subsequence", "subsequenceiternationcount", 
                   "startsubsequence", "rulesequnececount", "rulesequencerulename", 
                   "rulecount", "endsubsequence", "semicolon" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    COMMENT=18
    ID=19
    EXPR=20
    INT=21
    STRING=22
    LEFTPARAN=23
    RIGHTPARAN=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarname(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.GrammarnameContext,0)


        def startgrammar(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.StartgrammarContext,0)


        def grammarstructures(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.GrammarstructuresContext,0)


        def endgrammar(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.EndgrammarContext,0)


        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = AttributedGraphGrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(AttributedGraphGrammarParser.T__0)
            self.state = 127
            self.match(AttributedGraphGrammarParser.T__1)
            self.state = 128
            self.grammarname()
            self.state = 129
            self.startgrammar()
            self.state = 130
            self.grammarstructures()
            self.state = 131
            self.endgrammar()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartgrammarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFTPARAN(self):
            return self.getToken(AttributedGraphGrammarParser.LEFTPARAN, 0)

        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_startgrammar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartgrammar" ):
                listener.enterStartgrammar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartgrammar" ):
                listener.exitStartgrammar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartgrammar" ):
                return visitor.visitStartgrammar(self)
            else:
                return visitor.visitChildren(self)




    def startgrammar(self):

        localctx = AttributedGraphGrammarParser.StartgrammarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_startgrammar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(AttributedGraphGrammarParser.LEFTPARAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndgrammarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHTPARAN(self):
            return self.getToken(AttributedGraphGrammarParser.RIGHTPARAN, 0)

        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_endgrammar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndgrammar" ):
                listener.enterEndgrammar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndgrammar" ):
                listener.exitEndgrammar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndgrammar" ):
                return visitor.visitEndgrammar(self)
            else:
                return visitor.visitChildren(self)




    def endgrammar(self):

        localctx = AttributedGraphGrammarParser.EndgrammarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_endgrammar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(AttributedGraphGrammarParser.RIGHTPARAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AttributedGraphGrammarParser.ID, 0)

        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_grammarname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarname" ):
                listener.enterGrammarname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarname" ):
                listener.exitGrammarname(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarname" ):
                return visitor.visitGrammarname(self)
            else:
                return visitor.visitChildren(self)




    def grammarname(self):

        localctx = AttributedGraphGrammarParser.GrammarnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_grammarname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(AttributedGraphGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarstructuresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodetypes(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.NodetypesContext,0)


        def hostgraph(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.HostgraphContext,0)


        def rules(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.RulesContext,0)


        def rulesequences(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.RulesequencesContext,0)


        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_grammarstructures

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarstructures" ):
                listener.enterGrammarstructures(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarstructures" ):
                listener.exitGrammarstructures(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarstructures" ):
                return visitor.visitGrammarstructures(self)
            else:
                return visitor.visitChildren(self)




    def grammarstructures(self):

        localctx = AttributedGraphGrammarParser.GrammarstructuresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_grammarstructures)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.nodetypes()
                self.state = 140
                self.hostgraph()
                self.state = 141
                self.rules()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==AttributedGraphGrammarParser.T__14:
                    self.state = 142
                    self.rulesequences()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.nodetypes()
                self.state = 146
                self.rules()
                self.state = 147
                self.hostgraph()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==AttributedGraphGrammarParser.T__14:
                    self.state = 148
                    self.rulesequences()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodetypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodetype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AttributedGraphGrammarParser.NodetypeContext)
            else:
                return self.getTypedRuleContext(AttributedGraphGrammarParser.NodetypeContext,i)


        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_nodetypes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodetypes" ):
                listener.enterNodetypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodetypes" ):
                listener.exitNodetypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodetypes" ):
                return visitor.visitNodetypes(self)
            else:
                return visitor.visitChildren(self)




    def nodetypes(self):

        localctx = AttributedGraphGrammarParser.NodetypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_nodetypes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 153
                self.nodetype()
                self.state = 156 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==AttributedGraphGrammarParser.T__3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HostgraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def starthostgraph(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.StarthostgraphContext,0)


        def graph(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.GraphContext,0)


        def endhostgraph(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.EndhostgraphContext,0)


        def hostgraphname(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.HostgraphnameContext,0)


        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_hostgraph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHostgraph" ):
                listener.enterHostgraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHostgraph" ):
                listener.exitHostgraph(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHostgraph" ):
                return visitor.visitHostgraph(self)
            else:
                return visitor.visitChildren(self)




    def hostgraph(self):

        localctx = AttributedGraphGrammarParser.HostgraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_hostgraph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(AttributedGraphGrammarParser.T__2)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AttributedGraphGrammarParser.T__1:
                self.state = 159
                self.match(AttributedGraphGrammarParser.T__1)
                self.state = 160
                self.hostgraphname()


            self.state = 163
            self.starthostgraph()
            self.state = 164
            self.graph()
            self.state = 165
            self.endhostgraph()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RulesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AttributedGraphGrammarParser.Rule_Context)
            else:
                return self.getTypedRuleContext(AttributedGraphGrammarParser.Rule_Context,i)


        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_rules

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRules" ):
                listener.enterRules(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRules" ):
                listener.exitRules(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRules" ):
                return visitor.visitRules(self)
            else:
                return visitor.visitChildren(self)




    def rules(self):

        localctx = AttributedGraphGrammarParser.RulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 167
                self.rule_()
                self.state = 170 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==AttributedGraphGrammarParser.T__5):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodetypename(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.NodetypenameContext,0)


        def startnodetype(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.StartnodetypeContext,0)


        def endnodetype(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.EndnodetypeContext,0)


        def nodetypeattribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AttributedGraphGrammarParser.NodetypeattributeContext)
            else:
                return self.getTypedRuleContext(AttributedGraphGrammarParser.NodetypeattributeContext,i)


        def semicolon(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.SemicolonContext,0)


        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_nodetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodetype" ):
                listener.enterNodetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodetype" ):
                listener.exitNodetype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodetype" ):
                return visitor.visitNodetype(self)
            else:
                return visitor.visitChildren(self)




    def nodetype(self):

        localctx = AttributedGraphGrammarParser.NodetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nodetype)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(AttributedGraphGrammarParser.T__3)
                self.state = 173
                self.match(AttributedGraphGrammarParser.T__1)
                self.state = 174
                self.nodetypename()
                self.state = 175
                self.startnodetype()
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 176
                        self.nodetypeattribute() 
                    self.state = 181
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 182
                self.endnodetype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.match(AttributedGraphGrammarParser.T__3)
                self.state = 185
                self.match(AttributedGraphGrammarParser.T__1)
                self.state = 186
                self.nodetypename()
                self.state = 187
                self.semicolon()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodetypenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AttributedGraphGrammarParser.ID, 0)

        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_nodetypename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodetypename" ):
                listener.enterNodetypename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodetypename" ):
                listener.exitNodetypename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodetypename" ):
                return visitor.visitNodetypename(self)
            else:
                return visitor.visitChildren(self)




    def nodetypename(self):

        localctx = AttributedGraphGrammarParser.NodetypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_nodetypename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(AttributedGraphGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartnodetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFTPARAN(self):
            return self.getToken(AttributedGraphGrammarParser.LEFTPARAN, 0)

        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_startnodetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartnodetype" ):
                listener.enterStartnodetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartnodetype" ):
                listener.exitStartnodetype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartnodetype" ):
                return visitor.visitStartnodetype(self)
            else:
                return visitor.visitChildren(self)




    def startnodetype(self):

        localctx = AttributedGraphGrammarParser.StartnodetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_startnodetype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(AttributedGraphGrammarParser.LEFTPARAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndnodetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHTPARAN(self):
            return self.getToken(AttributedGraphGrammarParser.RIGHTPARAN, 0)

        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_endnodetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndnodetype" ):
                listener.enterEndnodetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndnodetype" ):
                listener.exitEndnodetype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndnodetype" ):
                return visitor.visitEndnodetype(self)
            else:
                return visitor.visitChildren(self)




    def endnodetype(self):

        localctx = AttributedGraphGrammarParser.EndnodetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_endnodetype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(AttributedGraphGrammarParser.RIGHTPARAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodetypeattributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodetypeattributename(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.NodetypeattributenameContext,0)


        def nodetypeattributetype(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.NodetypeattributetypeContext,0)


        def semicolon(self):
            return self.getTypedRuleContext(AttributedGraphGrammarParser.SemicolonContext,0)


        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_nodetypeattribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodetypeattribute" ):
                listener.enterNodetypeattribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodetypeattribute" ):
                listener.exitNodetypeattribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodetypeattribute" ):
                return visitor.visitNodetypeattribute(self)
            else:
                return visitor.visitChildren(self)




    def nodetypeattribute(self):

        localctx = AttributedGraphGrammarParser.NodetypeattributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_nodetypeattribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(AttributedGraphGrammarParser.T__4)
            self.state = 198
            self.match(AttributedGraphGrammarParser.T__1)
            self.state = 199
            self.nodetypeattributename()
            self.state = 200
            self.nodetypeattributetype()
            self.state = 201
            self.semicolon()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodetypeattributenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AttributedGraphGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return AttributedGraphGrammarParser.RULE_nodetypeattributename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodetypeattributename" ):
                listener.enterNodetypeattributename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodetypeattributename" ):
                listener.exitNodetypeattributename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodetypeattributename" ):
                return visitor.visitNodetypeattributename(self)
            else:
                return visitor.visitChildren(self)




    def nodetypeattributename(self):
